Add new phenotype-only Analysis preset